// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bbcode render render ":cat:" 1`] = `
<Memo(BBCode)
  plainText=":cat:"
>
  <Memo(PlainText)
    key="0"
  >
    <pre
      style={
        Object {
          "display": "inline",
        }
      }
    >
      🐱
    </pre>
  </Memo(PlainText)>
</Memo(BBCode)>
`;

exports[`bbcode render render "[asd]unrecognized tag should be ignore[/asd]" 1`] = `
<Memo(BBCode)
  plainText="[asd]unrecognized tag should be ignore[/asd]"
>
  <DefaultBBCodeComponent
    key="0"
    node={
      TagNode {
        "attrs": Object {},
        "content": Array [
          "unrecognized,",
          " ",
          ",tag,",
          " ",
          ",should,",
          " ",
          ",be,",
          " ",
          ",ignore",
        ],
        "tag": "asd",
      }
    }
  >
    <Memo(PlainText)>
      <pre
        style={
          Object {
            "display": "inline",
          }
        }
      >
        unrecognized, ,tag, ,should, ,be, ,ignore
      </pre>
    </Memo(PlainText)>
  </DefaultBBCodeComponent>
</Memo(BBCode)>
`;

exports[`bbcode render render "[img]http://example.com[/img]" 1`] = `
<Memo(BBCode)
  plainText="[img]http://example.com[/img]"
>
  <Memo(ImageTag)
    key="0"
    node={
      TagNode {
        "attrs": Object {},
        "content": Array [
          "http://example.com",
        ],
        "tag": "img",
      }
    }
  >
    <ImageViewer
      allImageUrls={Array []}
      originImageUrl="http://example.com"
    >
      <div
        className="image-viewer"
        onClick={[Function]}
      >
        <mock-image
          role="chatimage"
          src="http://example.com"
        />
      </div>
    </ImageViewer>
  </Memo(ImageTag)>
</Memo(BBCode)>
`;

exports[`bbcode render render "[url]http://baidu.com[/url]" 1`] = `
<Memo(BBCode)
  plainText="[url]http://baidu.com[/url]"
>
  <Memo(UrlTag)
    key="0"
    node={
      TagNode {
        "attrs": Object {},
        "content": Array [
          "http://baidu.com",
        ],
        "tag": "url",
      }
    }
  >
    <a
      href="http://baidu.com"
      rel="noreferrer"
      target="_blank"
      title="http://baidu.com"
    >
      http://baidu.com
    </a>
  </Memo(UrlTag)>
</Memo(BBCode)>
`;

exports[`bbcode render render "http://baidu.com" 1`] = `
<Memo(BBCode)
  plainText="http://baidu.com"
>
  <Memo(UrlTag)
    key="0"
    node={
      TagNode {
        "attrs": Object {},
        "content": Array [
          "http://baidu.com",
        ],
        "tag": "url",
      }
    }
  >
    <a
      href="http://baidu.com"
      rel="noreferrer"
      target="_blank"
      title="http://baidu.com"
    >
      http://baidu.com
    </a>
  </Memo(UrlTag)>
</Memo(BBCode)>
`;

exports[`bbcode render render "mix text image[img]http://example.com[/img]" 1`] = `
<Memo(BBCode)
  plainText="mix text image[img]http://example.com[/img]"
>
  <Memo(PlainText)
    key="0"
  >
    <pre
      style={
        Object {
          "display": "inline",
        }
      }
    >
      mix text image
    </pre>
  </Memo(PlainText)>
  <Memo(ImageTag)
    key="1"
    node={
      TagNode {
        "attrs": Object {},
        "content": Array [
          "http://example.com",
        ],
        "tag": "img",
      }
    }
  >
    <ImageViewer
      allImageUrls={Array []}
      originImageUrl="http://example.com"
    >
      <div
        className="image-viewer"
        onClick={[Function]}
      >
        <mock-image
          role="chatimage"
          src="http://example.com"
        />
      </div>
    </ImageViewer>
  </Memo(ImageTag)>
</Memo(BBCode)>
`;

exports[`bbcode render render "some sample text" 1`] = `
<Memo(BBCode)
  plainText="some sample text"
>
  <Memo(PlainText)
    key="0"
  >
    <pre
      style={
        Object {
          "display": "inline",
        }
      }
    >
      some sample text
    </pre>
  </Memo(PlainText)>
</Memo(BBCode)>
`;
